--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -14,6 +14,7 @@ $color-gray-050: #f9fafb;
 $color-gray-100: #f2f4f7;
 $color-gray-200: #e4e7ec;
 $color-gray-300: #d0d5dd;
+$color-gray-350: #b6b6b6;
 $color-gray-400: #98a2b3;
 $color-gray-500: #667085;
 $color-gray-600: #475467;
