News API를 활용한 YouTube Vue.js 콘텐츠 개발 中

--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -1,7 +1,7 @@
-@mixin flexbox($jc: center, $ai: center) {
+@mixin flexbox($ai, $jc) {
     display: flex;
-    justify-content: $jc;
     align-items: $ai;
+    justify-content: $jc;
 }
 
 @mixin flex-center {
