--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,13 +1,13 @@
-@import './_font.scss';
-@import './color';
-@import './mixin';
+@import "./_font.scss";
+@import "./color";
+@import "./mixin";
 
 * {
     margin: 0;
     padding: 0;
 
     // Font
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
